fix slider horizontal scroll, delete onclick from html, use mnemonic for copyright

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ body{
 .slider__body {
     max-width: 1120px;
     margin: 0 auto;
-
+    overflow: hidden;
 }
 .slider__item {
 
@@ -614,7 +614,8 @@ body{
     background: rgba(91, 155, 243, 1);
 }
 @keyframes fade {
-    from { opacity: 0.3; -webkit-transform: translateX(100%); transform: translateX(100%); }
+    from { opacity: 0.3; transform: translateX(100%)}
+    to{ opacity: 1}
 }
 
 .slider__controls {
